[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gui/play_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://scripts/GameMenuScene.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/play_button.png" type="Texture" id=3]
[ext_resource path="res://prefabs/BackGround.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gui/logo.png" type="Texture" id=5]
[ext_resource path="res://prefabs/DiamondSpriteFrames.tres" type="SpriteFrames" id=6]

[node name="GameMenuScene" type="Node2D"]
script = ExtResource( 2 )

[node name="BackGround" parent="." instance=ExtResource( 4 )]

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 240.0
margin_top = 1350.0
margin_right = 840.0
margin_bottom = 1600.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 540, 400 )
scale = Vector2( 12, 12 )
texture = ExtResource( 5 )

[node name="Diamond" type="AnimatedSprite" parent="."]
position = Vector2( 540, 900 )
scale = Vector2( 10, 10 )
frames = ExtResource( 6 )
animation = "sparkle"
frame = 8

[node name="DiamondAnimTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="animation_finished" from="Diamond" to="." method="_on_Diamond_animation_finished"]
[connection signal="timeout" from="DiamondAnimTimer" to="." method="_on_DiamondAnimTimer_timeout"]
